// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Avatar Basic 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium"
>
  <div
    aria-label="Jake Trent"
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Class Name Override 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium fakeClassName"
>
  <div
    aria-label="Jake Trent"
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Gravatar Invalid 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium"
>
  <img
    alt="Jake Trent"
    className="psds-avatar__image"
    onError={[Function]}
    onLoad={[Function]}
    src="https://secure.gravatar.com/avatar/invalidhash?d=tmp&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
  />
  <div
    aria-label="Jake Trent"
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Image Error 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium"
>
  <img
    alt="Jake Trent"
    className="psds-avatar__image"
    onError={[Function]}
    onLoad={[Function]}
    src="https://jaketrent.com/fake.jpg"
  />
  <div
    aria-label="Bill Dill"
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#0074AB",
      }
    }
  >
    B
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Image Flat And Long 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium"
>
  <img
    alt="Jake Trent"
    className="psds-avatar__image"
    onError={[Function]}
    onLoad={[Function]}
    src="https://cdn1.thr.com/sites/default/files/2019/03/chrisrocknaacp.jpg"
  />
  <div
    aria-label="Jake Trent"
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Image Square 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium"
>
  <img
    alt="Jake Trent"
    className="psds-avatar__image"
    onError={[Function]}
    onLoad={[Function]}
    src="https://gravatar.com/avatar/63a1fa126f541c0f0ecf1d74f7a40640?s=320&r=g&d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
  />
  <div
    aria-label="Jake Trent"
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Image Tall And Thin 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium"
>
  <img
    alt="Jake Trent"
    className="psds-avatar__image"
    onError={[Function]}
    onLoad={[Function]}
    src="https://akns-images.eonline.com/eol_images/Entire_Site/2010330/293.WillFerrell.tg.043010.jpg"
  />
  <div
    aria-label="Jake Trent"
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Image Valid 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium"
>
  <img
    alt="Jake Trent"
    className="psds-avatar__image"
    onError={[Function]}
    onLoad={[Function]}
    src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
  />
  <div
    aria-label="Jake Trent"
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Name Empty 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium"
>
  <div
    aria-label=""
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#C00F00",
      }
    }
  >
    :)
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Name Single Char 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium"
>
  <div
    aria-label="x"
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    X
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Name Special Char 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium"
>
  <div
    aria-label="% Special Char"
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    %
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Name Undefined 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium"
>
  <div
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#D1487B",
      }
    }
  >
    :)
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Sizes 1`] = `
Array [
  <div
    className="psds-avatar psds-avatar--size-xSmall"
  >
    <div
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      :)
    </div>
  </div>,
  <div
    className="psds-avatar psds-avatar--size-small"
  >
    <div
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      :)
    </div>
  </div>,
  <div
    className="psds-avatar psds-avatar--size-medium"
  >
    <div
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      :)
    </div>
  </div>,
  <div
    className="psds-avatar psds-avatar--size-large"
  >
    <div
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      :)
    </div>
  </div>,
  <div
    className="psds-avatar psds-avatar--size-xLarge"
  >
    <div
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      :)
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Avatar Style Override 1`] = `
<div
  className="psds-avatar psds-avatar--size-medium"
  style={
    Object {
      "border": "3px solid red",
    }
  }
>
  <div
    aria-label="Jake Trent"
    className="psds-avatar__initials"
    style={
      Object {
        "backgroundColor": "#7048C6",
      }
    }
  >
    J
  </div>
</div>
`;

exports[`Storyshots Components/Avatar Various Names 1`] = `
<div>
  <div
    className="psds-avatar psds-avatar--size-medium"
  >
    <div
      aria-label="Anakin Skywalker"
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#C00F00",
        }
      }
    >
      A
    </div>
  </div>
  <div
    className="psds-avatar psds-avatar--size-medium"
  >
    <div
      aria-label="Budapest Skywalker"
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      B
    </div>
  </div>
  <div
    className="psds-avatar psds-avatar--size-medium"
  >
    <div
      aria-label="Carlos Organa"
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#009380",
        }
      }
    >
      C
    </div>
  </div>
  <div
    className="psds-avatar psds-avatar--size-medium"
  >
    <div
      aria-label="Dennis Pimenta"
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#7048C6",
        }
      }
    >
      D
    </div>
  </div>
  <div
    className="psds-avatar psds-avatar--size-medium"
  >
    <div
      aria-label="Peia Organa"
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#0074AB",
        }
      }
    >
      P
    </div>
  </div>
  <div
    className="psds-avatar psds-avatar--size-medium"
  >
    <div
      aria-label="Obi-Wan Kenobi"
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      O
    </div>
  </div>
  <div
    className="psds-avatar psds-avatar--size-medium"
  >
    <div
      aria-label="Uy Marley"
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#D1487B",
        }
      }
    >
      U
    </div>
  </div>
  <div
    className="psds-avatar psds-avatar--size-medium"
  >
    <div
      aria-label="Harry Potter"
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#0074AB",
        }
      }
    >
      H
    </div>
  </div>
  <div
    className="psds-avatar psds-avatar--size-medium"
  >
    <div
      aria-label="Diz Blau"
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#6BA300",
        }
      }
    >
      D
    </div>
  </div>
  <div
    className="psds-avatar psds-avatar--size-medium"
  >
    <div
      aria-label="Single"
      className="psds-avatar__initials"
      style={
        Object {
          "backgroundColor": "#7048C6",
        }
      }
    >
      S
    </div>
  </div>
</div>
`;
